--- a/dev/css_dev/pages/_soo.scss
+++ b/dev/css_dev/pages/_soo.scss
@@ -67,6 +67,10 @@
         span {
           font-weight: $b;
         }
+          margin-bottom: 20px;
+        span.dbr {
+          display: block;
+        }
       }
     }
   }
@@ -91,50 +95,37 @@
         padding: 64px 43px;
         color: #fff;
         position: absolute;
-        i {
-          height: 128px;
-          width: 128px;
-          display: block;
-          margin: 0 auto;
-        }
         &:nth-child(1) {
           bottom: 0;
           left: 0;
           animation: updown 5s linear 0s infinite alternate;
-          i {
-            background: url(../../assets/images/ico/ico_podcasts_g.png) no-repeat center / cover ;
-          }
+          background: url(../../assets/images/ico/ico_podcasts_g.png) no-repeat #503AE7 top 20% left 50%;
         }
         &:nth-child(2) {
           top: 0;
           left: 25.25%;
           animation: downup 5s linear 0s infinite alternate;
-          i {
-            width: 138px;
-            background: url(../../assets/images/ico/ico_views_g.png) no-repeat center / cover ;
-          }
+          background: url(../../assets/images/ico/ico_views_g.png) no-repeat #503AE7 top 20% left 50%;
         }
         &:nth-child(3) {
           bottom: 0;
           left: 50.55%;
           animation: updown 5s linear 0s infinite alternate;
-          i {
-            width: 109px;
-            background: url(../../assets/images/ico/ico_subscribers_g.png) no-repeat center / cover ;
-          }
+          background: url(../../assets/images/ico/ico_subscribers_g.png) no-repeat #503AE7 top 20% left 50% ;
         }
         &:nth-child(4) {
           top: 0;
           margin-right: 0;
           left: 76%;
           animation: downup 5s linear 0s infinite alternate;
-          i {
-            background: url(../../assets/images/ico/ico_views_2.png) no-repeat center / cover ;
-          }
+          background: url(../../assets/images/ico/ico_views_2.png) no-repeat #503AE7 top 20% left 50% ;
         }
         span {
           display: block;
-          margin: 96px 0 16px 0;
+          margin-bottom: 16px;
+          padding-top: 240px;
+          font-size: 48px;
+          font-weight: $b;
         }
       }
     }
@@ -171,12 +162,16 @@
 
   // origins
   .origins_wrap {
+    background: none;
     padding: 0 20px;
     .ori_con {
       flex-wrap: wrap;
       .origins_txt,
       .journalist_txt {
-        width: 100% !important;
+        width: 100%;
+        .dbr {
+          display: none;
+        }
       }
       .journalist_txt {
         margin-top: 50px;
@@ -189,26 +184,14 @@
     height: 360px;
     .pod_vi {
       ul {
-        li {
+        li.heading_2 {
           padding: 20px 10px;
           font-size: 15px;
-          i {
-            height: 80px;
-            width: 80px;
-          }
+          background-size: 50%;
           span {
             margin: 30px 0 10px 0;
             font-size: 20px;
-          }
-          &:nth-child(2) {
-            i {
-              width: 89px !important;
-            }
-          }
-          &:nth-child(3) {
-            i {
-              width: 70px !important;
-            }
+            padding-top: 110px;
           }
         }
       }
@@ -244,27 +227,14 @@
     height: 280px;
     .pod_vi {
       ul {
-        li {
+        li.heading_2 {
           font-size: 14px;
           width: calc(( 100% - 15px) / 4);
           margin-right: 5px;
-          i {
-            height: 50px;
-            width: 50px;
-          }
           span {
             margin: 30px 0 10px 0;
             font-size: 20px;
-          }
-          &:nth-child(2) {
-            i {
-              width: 55px !important;
-            }
-          }
-          &:nth-child(3) {
-            i {
-              width: 43px !important;
-            }
+            padding-top: 70px;
           }
         }
       }
@@ -427,6 +397,10 @@
     .podcasts_list {
       li {
         margin-bottom: 32px;
+        a {
+         display: block;
+         height: 100%; 
+        }
         &:last-child {
           margin-bottom: 0;
         }
