--- a/dev/css_dev/pages/_main.scss
+++ b/dev/css_dev/pages/_main.scss
@@ -61,19 +61,51 @@
 }
 
 /* banner */
-.mq_logo_list{
-  width: 70%;
+.notify-wrap{
+  position:relative;
   margin: 192px auto 0 auto;
-  marquee{
-    & > a{
-      padding-right: 200px;
-      img{
-        vertical-align: -webkit-baseline-middle;
+  .ellipsis{
+    overflow: hidden;
+    white-space:nowrap;
+  }
+  .notify-wrap-inner{
+    padding: 0 20px;
+    margin:0 30px;
+    .notify-scroll{
+      display: inline-block;
+      animation:text-scroll 25s linear infinite;
+      ul{
+        li{
+          display: inline-block;
+          padding-right: 350px;
+          vertical-align: text-bottom;
+          a{
+            display: block;
+          }
+        }
       }
     }
   }
 }
+@keyframes text-scroll{
+  from{
+    transform:translateX(20%);
+    -moz-transform:translateX(20%);
+    -webkit-transform:translateX(20%);
+    -o-transform:translateX(20%);
+    -ms-transform:translateX(20%);
+  }
+  to{
+    transform:translateX(-100%);
+    -moz-transform:translateX(-100%);
+    -webkit-transform:translateX(-100%);
+    -o-transform:translateX(-100%);
+    -ms-transform:translateX(-100%);
+  }
+}
 
+
+//
 .page_home{
   .swiper {
     height: 100%;
@@ -188,14 +220,8 @@
   }
 
   /* banner */
-  .mq_logo_list{
-    width: 100%;
-    margin-top: 80px;
-    marquee{
-      & > a{
-        padding-right: 80px;
-      }
-    }
+  .notify-wrap{
+    margin: 80px auto 0 auto;
   }
 
   .custom_swiper{
@@ -251,8 +277,8 @@
   }
 
   /* banner */
-  .mq_logo_list{
-    margin-top: 40px;
+  .notify-wrap{
+    margin: 40px auto 0 auto;
   }
 
 } /* // mobile 지정 */
