--- a/assets/css/display_soo.css
+++ b/assets/css/display_soo.css
@@ -163,7 +163,7 @@
 
 .our_team .our_t_tit_wrap { margin: 0 auto; max-width: 1024px; }
 
-.our_team .our_t_tit_wrap .our_t_img_wrap { margin-top: 48px; background: url(../../assets/images/contents/about_banner.png) no-repeat bottom; height: 320px; width: 100%; }
+.our_team .our_t_tit_wrap img { margin-top: 48px; width: 100%; }
 
 .our_team .our_t_tit_wrap .our_t_txt { margin-top: 48px; display: flex; line-height: 24px; }
 
@@ -199,7 +199,7 @@
 
 .our_sponsors .our_s_tit_wrap .our_s_con ul li { background-color: #F4F2FF; position: relative; }
 
-.our_sponsors .our_s_tit_wrap .our_s_con ul li > img { text-align: center; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
+.our_sponsors .our_s_tit_wrap .our_s_con ul li > img { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
 
 .our_sponsors .our_s_tit_wrap .our_s_con ul li:last-child { color: #F4F2FF; background-color: #503AE7; padding: 32px; }
 
@@ -213,8 +213,11 @@
 
 @media only screen and (max-width: 768px) { .page_about .banner_top_01 .banner_top_tit_wrap { padding: 55px 20px; width: 45%; left: 0; bottom: 0; }
   .page_about .banner_top_01 .banner_top_tit_wrap .banner_top_tit .typ_sec { padding: 0; }
+  .our_team { background: none; }
   .our_team .our_t_tit_wrap { padding: 0 20px; }
   .our_team .our_t_tit_wrap .our_t_txt { margin-top: 28px; }
+  .meet_our_team { background: none; }
+  .our_sponsors .our_s_tit_wrap { background: none; }
   .our_sponsors .our_s_tit_wrap .our_s_con ul li > img { width: 80%; }
   .our_sponsors .our_s_tit_wrap .our_s_con ul li:last-child { padding: 22px; }
   .our_sponsors .our_s_tit_wrap .our_s_con ul li:last-child p { font-size: 19px; }
@@ -253,9 +256,15 @@
 
 .page_blog .list_typ_01 .typ_list_wrap ul li .img_wrap:hover > img { transform: scale(1.1); }
 
+.page_blog .list_typ_01 .typ_list_wrap ul li .typ_sub_wrap h3, .page_blog .list_typ_01 .typ_list_wrap ul li .typ_sub_wrap p { white-space: normal; display: -webkit-box; -webkit-box-orient: vertical; overflow: hidden; }
+
+.page_blog .list_typ_01 .typ_list_wrap ul li .typ_sub_wrap h3 { -webkit-line-clamp: 2; }
+
+.page_blog .list_typ_01 .typ_list_wrap ul li .typ_sub_wrap p { -webkit-line-clamp: 3; }
+
 @media only screen and (max-width: 768px) { .page_blog .list_typ_01 .typ_list_wrap ul li { margin-bottom: 30px; }
   .page_blog .list_typ_01 .typ_list_wrap ul li:nth-child(n+4) { margin-top: inherit; }
-  .page_blog .list_typ_01 .typ_list_wrap ul li img { object-fit: cover; } }
+  .page_blog .list_typ_01 .typ_list_wrap ul li img { object-fit: cover; height: inherit; } }
 
 /* blog e =================================================== */
 /* ========================================================== */
