--- a/dev/css_dev/pages/_soo.scss
+++ b/dev/css_dev/pages/_soo.scss
@@ -508,7 +508,7 @@
 }
 
 
-//out_team
+//our_team
 .our_team {
   margin-top: 86px;
   background: url(../../assets/images/lines/bg_lines_10.png) no-repeat left 33%;
@@ -516,10 +516,8 @@
   .our_t_tit_wrap {
     margin: 0 auto;
     max-width: 1024px;
-    .our_t_img_wrap {
+    img {
       margin-top: 48px;
-      background: url(../../assets/images/contents/about_banner.png) no-repeat bottom;
-      height: 320px;
       width: 100%;
     }
     .our_t_txt {
@@ -564,8 +562,6 @@
             margin-top: 16px !important;
             ul {
               margin-top: inherit;
-              li {
-              }
             }
           }
         }
@@ -600,7 +596,6 @@
           background-color: #F4F2FF;
           position: relative;
           >img {
-            text-align: center;
             position: absolute;
             top: 50%;
             left: 50%;
@@ -665,6 +660,7 @@
 
   // our_team
   .our_team {
+    background: none;
     .our_t_tit_wrap {
       padding: 0 20px;
       .our_t_txt {
@@ -673,9 +669,15 @@
     }
   }
 
+  // meet_our_team
+  .meet_our_team {
+    background: none;
+  }
+
   // our_sponsors
   .our_sponsors {
     .our_s_tit_wrap {
+      background: none;
       .our_s_con {
         ul {
           li {
@@ -829,6 +831,21 @@
               }
             }
           }
+          .typ_sub_wrap {
+            h3,
+            p {
+              white-space: normal;
+              display: -webkit-box;
+              -webkit-box-orient: vertical;
+              overflow: hidden;  
+            }
+            h3 {
+              -webkit-line-clamp: 2;
+            }
+            p {
+              -webkit-line-clamp: 3;
+            }
+          }
         }
       }
     }
@@ -838,8 +855,6 @@
 // mdq_tab
 @media only screen and (max-width: 768px) {
   .page_blog {
-    .top_sec_wrap {
-    }
     .list_typ_01 {
       .typ_list_wrap {
         ul {
@@ -850,6 +865,7 @@
             }
             img {
               object-fit: cover;
+              height: inherit;
             }
           }
         }
@@ -907,8 +923,6 @@
   .single_blog_top {
     .sin_b_top_tit {
       margin: 34px 0 0 8%;
-      em {
-      }
       p {
         margin-top: 16px;
         .dbr {
@@ -935,8 +949,6 @@
     .single_blog_top {
       .sin_b_top_tit {
         margin: 34px 20px 0 20px;
-        em {
-        }
         p {
           line-height: 25px;
           .dbr {
@@ -1023,11 +1035,6 @@
           display: grid;
           grid-template-columns: 1fr 1fr;
           gap: 30px 100px;
-          li {
-            img {
-
-            }
-          }
         }
       }
       .socials {
@@ -1045,52 +1052,16 @@
       flex-wrap: wrap;
       .contact_input_wrap {
         width: 100%;
-        .contact_input_txt {
-          p {
-
-          }
-        }
         .contact_input {
-
           input {
-
             &:nth-child(4) {
               height: 128px;
             }
-            &:last-child {
-
-            }
-          }
-          input[type=submit] {
-
           }
         }
       }
       .contact_sub {
         margin: 70px 0 0 0;
-        h3 {
-
-        }
-        .subscribe {
-          h3 {
-          }
-          .podcasts_list {
-
-            li {
-              img {
-  
-              }
-            }
-          }
-        }
-        .socials {
-
-          ul {
-
-            li {
-            }
-          }
-        }
       }
     }
   }
