--- a/dev/css_dev/pages/_main.scss
+++ b/dev/css_dev/pages/_main.scss
@@ -137,8 +137,7 @@
   .custom_swiper{
     .custom_wrap{
       overflow: visible;
-      & > li{
-        margin-bottom: 28px;
+      .item{
         &::after{
           content: '';
           display: block;
