--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -742,19 +742,19 @@ header .gnb .sub_menu ul.sns li a { vertical-align: sub; }
 
 .button-cover, .sun, .moon { position: absolute; top: 0; right: 0; bottom: 0; left: 0; width: 0px; }
 
-.turn { position: relative; top: 52%; left: 82px; width: 6rem; height: 2.6rem; margin: -2rem auto 0 auto; overflow: hidden; border-radius: 100px; }
+.turn { position: relative; top: 52%; left: 82px; width: 5rem; height: 2.6rem; margin: -2rem auto 0 auto; overflow: hidden; border-radius: 100px; }
 
 .turn .switch_chk { position: relative; width: 100%; height: 100%; padding: 0; margin: 0; opacity: 0; cursor: pointer; z-index: 3; }
 
 .turn .sun, .turn .moon { transition: 0.3s ease all; }
 
-.turn .sun { width: 100%; z-index: 2; background: url(../../assets/images/ico/sun.png) no-repeat 22% center; }
+.turn .sun { width: 100%; z-index: 2; }
 
-.turn .sun::before { content: ""; background: url(../../assets/images/ico/sun.png) no-repeat 50% center; position: absolute; top: .4rem; left: .4rem; width: 1rem; height: 0rem; padding: .9rem .4rem; background-color: #3563E9; border-radius: 50%; transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) all; }
+.turn .sun::before { content: ""; background: url(../../assets/images/ico/sun.png) no-repeat 50% center; position: absolute; top: .4rem; left: .4rem; width: 1rem; height: 0rem; padding: .9rem .4rem; background-color: #503AE7; border-radius: 50%; transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) all; }
 
 .turn .moon { width: 100%; background-color: #ebf7fc; transition: 0.3s ease all; z-index: 1; }
 
-.turn .switch_chk:checked + .sun:before { content: ""; left: 3.7rem; background: #3563E9 url(../../assets/images/ico/moon.png) no-repeat 60% center; }
+.turn .switch_chk:checked + .sun:before { content: ""; left: 2.9rem; background: #503AE7 url(../../assets/images/ico/moon.png) no-repeat 60% center; }
 
 /* ---------------------------------------------------------- */
 @media only screen and (max-width: 768px) { .footer_top { padding: 0; margin-top: 30px; }
@@ -827,6 +827,11 @@ header .gnb .sub_menu ul.sns li a { vertical-align: sub; }
 
 .list_type .typ_list_wrap ul li:last-child { margin-right: 0; }
 
+/* list_typ_01 */
+.list_typ_01 .typ_list_wrap .iframe_wrap { position: relative; height: 0; padding-bottom: 56.25%; }
+
+.list_typ_01 .typ_list_wrap .iframe_wrap iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
 /* list_type_01 _ tit */
 .typ_tit_wrap { color: var(--fontColor); }
 
@@ -847,11 +852,9 @@ a.mute { position: absolute; top: 16px; right: 16px; color: #fff; }
 a.mute i { background: url(../../assets/images/ico/ico_vector.png) no-repeat center/14px; width: 40px; height: 40px; border-radius: 50%; background-color: #503AE7; display: inline-block; vertical-align: middle; }
 
 /* list_type_02 */
-.list_typ_02 .typ_list_wrap ul li a { display: block; }
+.list_typ_02 .typ_list_wrap ul li .list_item .typ_list_img { width: 100%; height: 100%; }
 
-.list_typ_02 .typ_list_wrap ul li a .typ_list_img { width: 100%; height: 100%; }
-
-.list_typ_02 .typ_list_wrap ul li a .typ_sub_wrap h3 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
+.list_typ_02 .typ_list_wrap ul li .list_item .typ_sub_wrap h3 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
 
 .page_home .typ_tit_wrap .type_01_sub p { width: 46%; }
 
