li > div 등 수정사항 반영

--- a/dev/css_dev/pages/_soo.scss
+++ b/dev/css_dev/pages/_soo.scss
@@ -546,6 +546,11 @@
     .meetTeamSwiper {
       margin-top: 49px;
       .swiper-slide {
+        img {
+          width: 308px;
+          height: 302px;
+          object-fit: cover;
+        }
         .meet_t_txt {
           .name {
             display: block;
