--- a/assets/css/display_soo.css
+++ b/assets/css/display_soo.css
@@ -7,6 +7,10 @@
 /* soo s =================================================== */
 .blind { position: absolute; width: 1px; height: 1px; overflow: hidden; clip: rect(0, 0, 0, 0); margin: -1px; }
 
+.db { display: block; }
+
+.dn { display: none; }
+
 /* ========================================================== */
 /* host s                                                     */
 /* ========================================================== */
