--- a/dev/css_dev/pages/_soo.scss
+++ b/dev/css_dev/pages/_soo.scss
@@ -17,6 +17,13 @@
   margin: -1px;
 }
 
+.db {
+  display: block;
+}
+
+.dn {
+  display: none;
+}
 
 /* ========================================================== */
 /* host s                                                     */
