--- a/dev/css_dev/layout/_header.scss
+++ b/dev/css_dev/layout/_header.scss
@@ -14,7 +14,7 @@ header {
   display: flex;
   justify-content: space-between;
   z-index: 30;
-  overflow: hidden;
+  max-width: 1280px;
   h1 {
     margin: 0;
     a {
@@ -23,6 +23,22 @@ header {
         vertical-align: middle;
       }
     }
+  }
+}
+
+header.drop {
+  position: fixed;
+  animation: drop 0.3s;
+  top: 0;
+  width: 100%;
+}
+
+@keyframes drop {
+  0% {
+    top: -5rem;
+  }
+  100% {
+    top: 0;
   }
 }
 
