--- a/dev/css_dev/layout/_nav.scss
+++ b/dev/css_dev/layout/_nav.scss
@@ -55,6 +55,30 @@ header {
         }
       }
     }
+    .quick_top {
+      position: relative;
+      a.btn_top {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: $prime_color;
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        &:after {
+          content: '';
+          height: 0;
+          width: 0;
+          position: absolute;
+          border: 7px solid transparent;
+          border-top-width: 0;
+          border-bottom-color: #fff;
+          top: 47%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+    }
   }
 }
 
