--- a/assets/css/display_kim.css
+++ b/assets/css/display_kim.css
@@ -56,7 +56,7 @@
 
 .page_home .swiper-sec { position: relative; margin-bottom: 64px; }
 
-.page_home .swiper-sec .swiper-button-next, .page_home .swiper-sec .swiper-button-prev { width: 48px; height: 48px; border-radius: 50%; margin-top: 0; }
+.page_home .swiper-sec .swiper-button-next, .page_home .swiper-sec .swiper-button-prev { width: 48px; height: 48px; border-radius: 50%; margin-top: 0; display: block; opacity: 1; cursor: pointer; pointer-events: auto; }
 
 .page_home .swiper-sec .swiper-button-next::after, .page_home .swiper-sec .swiper-button-prev::after { content: ''; }
 
@@ -91,7 +91,7 @@
   /* banner */
   .notify-wrap { margin: 80px auto 0 auto; }
   .custom_swiper .custom_wrap { display: flex; }
-  .page_home .swiper { margin: 30px 0px 0; padding: 0 16px; }
+  .page_home .custom_swiper { margin: 30px 0px 0; padding: 0 16px; }
   .page_home .swiper-sec { margin-bottom: 64px; }
   .page_home .swiper-sec .swiper_btn_wrap { position: absolute; position: absolute; right: 66px; bottom: -10px; }
   .page_home .swiper-sec .swiper-button-next, .page_home .swiper-sec .swiper-button-prev { width: 32px; height: 32px; background-size: 50%; } }
