--- a/dev/css_dev/layout/_container.scss
+++ b/dev/css_dev/layout/_container.scss
@@ -173,6 +173,13 @@
     width: 632px;
     height: 450px;
     background-color: $prime_color;
+    &::before{
+      content: '';
+      display: block;
+      height: 100%;
+      width: 100%;
+      background: url(../../assets/images/lines/bg_lines_3.png) no-repeat left 34px top 125px;
+    }
     &::after{
       content: '';
       display: block;
@@ -180,13 +187,14 @@
       height: 72px;
       width: 108px;
       position: absolute;
-      right: 105px;
+      right: 90px;
       bottom: 138px;
+      z-index: 1;
     }
     .img_only{
       position: relative;
-      left: 12%;
-      top: 50%;
+      left: 0;
+      top: -78%;
       transform: translateY(-50%);
       overflow: hidden;
       width: 100%;
@@ -194,9 +202,9 @@
       height: 100%;
       max-height: 384px;
       border-radius: 384px;
-      & > p{
+      & > div{
         width: 100%;
-        height: 0;
+        //height: 0;
         padding-bottom: 100%;
         img{
           position: absolute;
@@ -207,11 +215,6 @@
           object-fit: cover;
           margin: auto;
         }
-      }
-    }
-    @media only screen and (max-width: 890px) {
-      .img_only{
-        left: 0;
       }
     }
   }
@@ -496,7 +499,9 @@
         }
         .img_only{
           left: 50%;
+          top: 50%;
           transform: translate(-50%, -50%);
+          margin: 30px 0px 0;
         }
     }
   }
@@ -566,7 +571,7 @@
 .page_home{
   .typ_01_img{
     .img_only{
-      height: auto;
+      //height: auto;
     }
   }
 }
