--- a/dev/css_dev/pages/_main.scss
+++ b/dev/css_dev/pages/_main.scss
@@ -121,6 +121,10 @@
       height: 48px;
       border-radius: 50%;
       margin-top: 0;
+      display: block;
+      opacity: 1;
+      cursor: pointer;
+      pointer-events: auto;
       &::after{
         content: '';
       }
@@ -229,7 +233,7 @@
     }
   }
   .page_home{
-    .swiper {
+    .custom_swiper {
       margin: 30px 0px 0;
       padding: 0 16px;
     }
